force-app/main/default/objects/Contact/fields/Is_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Is_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authorized ?</label>
    <type>Checkbox</type>
</CustomField>